// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Tests should match with snapshot (with on press) 1`] = `
<RNGestureHandlerButton
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  handlerTag={5}
  handlerType="NativeViewGestureHandler"
  onActiveStateChange={[Function]}
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  onPress={[MockFunction]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FE8C00",
      "borderRadius": 16,
      "justifyContent": "center",
      "marginTop": 16,
      "paddingBottom": 31,
      "paddingLeft": 31,
      "paddingRight": 31,
      "paddingTop": 31,
      "width": "100%",
    }
  }
  testID="ButtonTestID"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Hello world!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Button Tests should match with snapshot (without onPress) 1`] = `
<RNGestureHandlerButton
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  handlerTag={6}
  handlerType="NativeViewGestureHandler"
  onActiveStateChange={[Function]}
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FE8C00",
      "borderRadius": 16,
      "justifyContent": "center",
      "marginTop": 16,
      "paddingBottom": 31,
      "paddingLeft": 31,
      "paddingRight": 31,
      "paddingTop": 31,
      "width": "100%",
    }
  }
  testID="ButtonTestID"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 16,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Hello world!
  </Text>
</RNGestureHandlerButton>
`;
